This is just to motivate myself to improve a little bit every day :)

Best: 32

03-05-2024
Streak: 1
Learned:
Did:
    -Make detekt rules that exclude tests also exclude generated files

01-05-2024
Streak: 1
Learned:
Did:
    -Disable ktlint for generated files with .editorconfig
    -Disable ktlint naming rule that doesn't match Composable naming style
    -Clear remaining ktlint errors
    -Generate default detekt config
    -Suppress MagicNumber warning in file that localises ordinal numbers

29-04-2024
Streak: 1
Learned:
Did:
    -Add ktlint plugin to project

24-04-2024
Streak: 32
Learned:
Did:
    -Add linter command script, remove obsolete lint.xml file

23-04-2024
Streak: 31
Learned:
    -Realise linter isn't going to work, need to use ktlint and detekt instead
Did:
    -Add detekt as plugin to project (as yet untested)

22-04-2024
Streak: 30
Learned:
    -Read about adding linter rules
Did:

21-04-2024
Streak: 29
Learned:
Did:
    -Finalise MainMenu title design and implementation

20-04-2024
Streak: 28
Learned:
Did:
    -Add menu title strings for en and nl. Move menu title to its own component,
        for now passing the whole parent state
    -Add Int to ordinal number String function in resourceComposition. Tidy up MainMenuTitle code

19-04-2024
Streak: 27
Learned:
Did:
    -Add 'festive days' to the app, to display instead of dayOfWeek on special days
    -Make mock-up for MainMenu title -> still needs to be done properly and in its own component

18-04-2024
Streak: 26
Learned:
Did:
    -Make Main Menu View only rely on Main Menu View Model, not Calendar View Model

17-04-2024
Streak: 25
Learned:
Did:
    -Update en and nl strings to only populate the plural forms they use, add NL to Locale lib
    -Add Locales from Azerbaijani .. Danish
    -Add support for all Locales that have their ordinal rules listed at
        https://www.unicode.org/cldr/cldr-aux/charts/36.1/supplemental/language_plural_rules.html